Fixed author overflow issue on small viewport widths

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17422,6 +17422,7 @@ body {
   margin-bottom: 0px;
 }
 .card-owner-title {
+  white-space: normal;
   line-height: 1.5rem;
   color: #333645;
   font-weight: 600;
