--- a/scss/sections/_latestcards.scss
+++ b/scss/sections/_latestcards.scss
@@ -111,6 +111,7 @@
         margin-bottom: 0px;
     }
     &-title {
+        white-space: normal;
         line-height: 1.5rem;
         color: #333645;
         font-weight: 600;
